--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://avatars2.githubusercontent.com/u/582429?v=3&amp;u=6866319adc61fb
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: dharmjit.bti@gmail.com
   facebook:
   flickr:
   github: dharmjit
   instagram:
-  linkedin:
+  linkedin: dharmjitsingh
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
