--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: dharmjitsingh2
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: # channel/UCNCbLAXe716V2B7TEsiWcoA
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
